formatting and update skills section (Volunteer)

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             </div>
 <div class="card-action">
   <span>
-    Volunteer,<a href="/assets/img/ccc.jpg" target="_blank"><img src="/assets/img/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">Cyber Guardian Plus (CG+)</a>| Jul 2025 - Present
+    Volunteer, <a href="/assets/img/ccc.jpg" target="_blank"><img src="/assets/img/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">Cyber Guardian Plus (CG+)</a>| Jul 2025 - Present
   </span>
 </div>
              <ul>
@@ -931,7 +931,15 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li>Participated in Community Engagement Seminar covering topics such as tackling cybercrime in Singapore, understanding deepfakes, and building collaborative defences against emerging threats</li>
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, roles, volunteer training, roadmap, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
 <li>Engaged in CG+ internal WhatsApp group for weekly updates on cybercrime trends and direct communication with SPF Cybercrime Command officers</li>
- <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, Have I Been Pwned, ScamShield, scam identification and reporting on social media (e.g. TikTok, Instagram, Facebook), phishing awareness, cyber threat landscape</li>
+<li><b>Skills:</b>
+  <ul>
+    <li><b>Cybersecurity Tools & Platforms:</b> CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, Have I Been Pwned</li>
+    <li><b>Threat Detection & Reporting:</b> Scam identification, phishing detection, malware site reporting, malicious content analysis on social media (e.g. TikTok, Instagram, Facebook)</li>
+    <li><b>Threat Intelligence & Awareness:</b> Cyber threat landscape monitoring, deepfake awareness, cybercrime trends in Singapore</li>
+    <li><b>Community Engagement & Communication:</b> Weekly cybercrime updates via CG+ WhatsApp group, direct liaison with SPF Cybercrime Command officers, participation in seminars and training sessions</li>
+    <li><b>Professional Skills:</b> Public awareness contribution, teamwork in community cyber defence, ethical conduct, volunteer discipline</li>
+  </ul>
+</li>
 
     </ul>
           </div>
