--- a/index.html
+++ b/index.html
@@ -933,11 +933,11 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li>Engaged in CG+ internal WhatsApp group for weekly updates on cybercrime trends and direct communication with SPF Cybercrime Command officers</li>
 <li><b>Skills:</b>
   <ul>
-    <li><b>Cybersecurity Tools & Platforms:</b> CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, Have I Been Pwned</li>
-    <li><b>Threat Detection & Reporting:</b> Scam identification, phishing detection, malware site reporting, malicious content analysis on social media (e.g. TikTok, Instagram, Facebook)</li>
-    <li><b>Threat Intelligence & Awareness:</b> Cyber threat landscape monitoring, deepfake awareness, cybercrime trends in Singapore</li>
-    <li><b>Community Engagement & Communication:</b> Weekly cybercrime updates via CG+ WhatsApp group, direct liaison with SPF Cybercrime Command officers, participation in seminars and training sessions</li>
-    <li><b>Professional Skills:</b> Public awareness contribution, teamwork in community cyber defence, ethical conduct, volunteer discipline</li>
+    <li><strong>Cybersecurity Tools & Platforms:</strong> CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, Have I Been Pwned</li>
+    <li><strong>Threat Detection & Reporting:</strong> Scam identification, phishing detection, malware site reporting, malicious content analysis on social media (e.g. TikTok, Instagram, Facebook)</li>
+    <li><strong>Threat Intelligence & Awareness:</strong> Cyber threat landscape monitoring, deepfake awareness, cybercrime trends in Singapore</li>
+    <li><strong>Community Engagement & Communication:</strong> Weekly cybercrime updates via CG+ WhatsApp group, direct liaison with SPF Cybercrime Command officers, participation in seminars and training sessions</li>
+    <li><strong>Professional Skills:</strong> Public awareness contribution, teamwork in community cyber defence, ethical conduct, volunteer discipline</li>
   </ul>
 </li>
 
