--- a/index.html
+++ b/index.html
@@ -266,16 +266,18 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li>Developed PairChat assistant bots to streamline responses to common queries about cybersecurity requirements for project specifications—including clauses on audit regimes, RTO/RPO, third-party compliance, offshoring, and more—doubling workflow efficiency</li>
 <li>Proactively monitored and identified systems requiring annual VAPT and Third Party Management using the Digital Governance Platform (DGP), ensuring timely action and up-to-date records</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
+<li>Extracted medium and high risk findings from Zimperium reports and consolidated them to implement appropriate remediation measures</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
       <li>Initiated and secured the annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR), raising Purchase Orders (PO), and processing Goods Received Notes (GRNs); also managed contract extensions for GovTech Vulnerability Management System</li>
       <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
- <li>Engaged with VAPT vendors to deepen hands-on expertise in Burp Suite’s hybrid testing methods, strengthening VAPT capabilities as VAPT OIC</li>
+ <li>Engaged with VAPT vendors to deepen hands-on expertise in Burp Suite’s hybrid testing methods, strengthening VAPT capabilities as VAPT Project OIC</li>
 <li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
       <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
       <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards and Sharepoint lists</li>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
       <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
+<li>Facilitated application walkthrough sessions prior to VAPT to help vendors better understand PUB’s system application functions</li>
       <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall and ensured tested connectivity and valid credentials to facilitate secure and seamless access for VAPT vendor</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
@@ -298,11 +300,11 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
  <li>
 <b>Skills:</b> <br>
-<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
+<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
-<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
-<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br>
+<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br>
+<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br>
 <strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
