add in linktree

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
-              <h5 style="text-align: justify;">Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
+              <h5 style="text-align: justify;">Reliable, Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
@@ -207,6 +207,13 @@
                   <i class="fa fa-github"></i>
                 </button>
               </a>
+ <!-- Linktree Button - NEW -->
+            <a href="https://linktr.ee/gadlau" target="_blank">
+                <button class="icon-btn linktree">
+                    <i class="fa fa-link"></i>
+                </button>
+            </a>
+        </div>
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
