amend formating and logo color

--- a/index.html
+++ b/index.html
@@ -196,29 +196,29 @@
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
               <h5 style="text-align: justify;">Reliable, Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
             </div>
-            <div class="social">
-              <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
-                <button class="icon-btn linkedin">
-                  <i class="fa fa-linkedin"></i>
-                </button>
-              </a>
-              <a href="https://github.com/glrz/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
-                </button>
-              </a>
- <!-- Linktree Button - NEW -->
-            <a href="https://linktr.ee/gadlau" target="_blank">
-                <button class="icon-btn linktree">
-                    <i class="fa fa-link"></i>
-                </button>
-            </a>
-        </div>
-            </div>
-            <div class='buttons'>
-              <a href="#about" class="readme">Read More</a>
-              <a href="#contact" class="contactme">Contact Me</a>
-            </div>
+           <div class="social">
+    <!-- LinkedIn Button -->
+    <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
+        <button class="icon-btn linkedin">
+            <i class="fa fa-linkedin"></i>
+        </button>
+    </a>
+    <!-- GitHub Button -->
+    <a href="https://github.com/glrz/" target="_blank">
+        <button class="icon-btn github">
+            <i class="fa fa-github"></i>
+        </button>
+    </a>
+    <!-- Linktree Button -->
+    <a href="https://linktr.ee/gadlau" target="_blank">
+        <button class="icon-btn linktree">
+            <i class="fa fa-link"></i>
+        </button>
+    </a>
+    <!-- Add your other buttons here -->
+    <a href="#about" class="readme">Read More</a>
+    <a href="#contact" class="contactme">Contact Me</a>
+</div>
           </div>
         </div>
       </div>
