amend main  block

--- a/index.html
+++ b/index.html
@@ -186,43 +186,58 @@
   <!-- Main Content-->
   <main>
     <!-- First Section: Heading lines and image -->
-    <section id="intro" class="section scrollspy full-height">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="col-md-9">
-          <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
-            <div class="caption">
-              <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
-              <h5 style="text-align: justify;">Reliable, Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
-            </div>
-           <div class="social">
-    <!-- LinkedIn Button -->
-    <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
-        <button class="icon-btn linkedin">
-            <i class="fa fa-linkedin"></i>
-        </button>
-    </a>
-    <!-- GitHub Button -->
-    <a href="https://github.com/glrz/" target="_blank">
-        <button class="icon-btn github">
-            <i class="fa fa-github"></i>
-        </button>
-    </a>
-    <!-- Linktree Button -->
-    <a href="https://linktr.ee/gadlau" target="_blank">
-        <button class="icon-btn linktree">
-            <i class="fa fa-link"></i>
-        </button>
-    </a>
-    <!-- Add your other buttons here -->
-    <a href="#about" class="readme">Read More</a>
-    <a href="#contact" class="contactme">Contact Me</a>
-</div>
+  <section id="intro" class="section scrollspy full-height">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="col-md-9">
+        <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
+          
+          <!-- Text Caption -->
+          <div class="caption">
+            <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
+            <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
+            <h5 style="text-align: justify;">Reliable, Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
           </div>
+
+          <!-- START: AMENDED CODE -->
+          <!-- This wrapper ensures both rows of buttons are aligned together -->
+          <div class="actions-wrapper" style="margin-top: 25px;">
+
+            <!-- Row 1: Social Media Icons -->
+            <div class="social" style="margin-bottom: 20px;">
+              <!-- LinkedIn Button -->
+              <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
+                <button class="icon-btn linkedin">
+                  <i class="fa fa-linkedin"></i>
+                </button>
+              </a>
+              <!-- GitHub Button -->
+              <a href="https://github.com/glrz/" target="_blank">
+                <button class="icon-btn github">
+                  <i class="fa fa-github"></i>
+                </button>
+              </a>
+              <!-- Linktree Button -->
+              <a href="https://linktr.ee/gadlau" target="_blank">
+                <button class="icon-btn linktree">
+                  <i class="fa fa-link"></i>
+                </button>
+              </a>
+            </div>
+
+            <!-- Row 2: Read More / Contact Me Buttons -->
+            <div class="buttons">
+              <a href="#about" class="readme">Read More</a>
+              <a href="#contact" class="contactme">Contact Me</a>
+            </div>
+
+          </div>
+          <!-- END: AMENDED CODE -->
+
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
