update PUB exp and  volunteer

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
 <li>Championed the development and implementation of PUB’s inaugural IT Risk Assessment Framework one-stop portal, delivering a user-friendly interface and enhanced guidance materials that streamlined risk assessment processes and improved workflow efficiency across teams</li>
+<li>Pioneered the creation of PUB’s first Cybersecurity Project Specifications one-stop portal, featuring an AI-powered PairChat assistant that guided users in selecting suitable specifications, identifying required information, and locating the latest updates—boosting collaboration and workflow efficiency between project and cybersecurity teams by 200%</li>
 <li>Pioneered a pilot leveraging GenAI to streamline IM8 (Reform) risk assessments, simplifying risk identification and boosting analytical efficiency</li>
       <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
 <li>Oversaw Vulnerability Management Systems (VMS) and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
@@ -320,7 +321,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
  <li>
 <b>Skills:</b> <br>
-<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
+<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, AWS GuardDuty, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br>
@@ -954,8 +955,8 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, roles, volunteer training, roadmap, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
 <li>Engaged in CG+ internal WhatsApp group for weekly updates on cybercrime trends and direct communication with SPF Cybercrime Command officers</li>
 <li><b>Skills:</b>
-    <li><strong>Cybersecurity Tools & Platforms:</strong> CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, Have I Been Pwned</li>
-    <li><strong>Threat Detection & Reporting:</strong> Scam identification, phishing detection, malware site reporting, malicious content analysis on social media (e.g. TikTok, Instagram, Facebook)</li>
+    <li><strong>Cybersecurity Tools & Platforms:</strong> CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, Have I Been Pwned, Trusted Sites - gov.sg</li>
+    <li><strong>Threat Detection & Reporting:</strong> Scam identification & reporting, phishing detection, malware site reporting, malicious content analysis on social media (e.g. TikTok, Instagram, Facebook)</li>
     <li><strong>Threat Intelligence & Awareness:</strong> Cyber threat landscape monitoring, deepfake awareness, cybercrime trends in Singapore</li>
     <li><strong>Community Engagement & Communication:</strong> Weekly cybercrime updates via CG+ WhatsApp group, direct liaison with SPF Cybercrime Command officers, participation in seminars and training sessions</li>
     <li><strong>Professional Skills:</strong> Public awareness contribution, teamwork in community cyber defence, ethical conduct, volunteer discipline</li>
