--- a/index.html
+++ b/index.html
@@ -321,16 +321,16 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
  <li>
 <b>Skills:</b> <br>
-<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, AWS GuardDuty, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
-<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br>
-<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
-<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br>
-<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br>
-<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br>
-<strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
-<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
-<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br>
-<strong>Professional:</strong> Staff Work, Team Collaboration, Project & Stakeholder Management, Presentations, Critical Thinking (Mental Models, Ladder of Inference)
+<li><strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, AWS GuardDuty, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br></li>
+<li><strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br></li>
+<li><strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br></li>
+<li><strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br></li>
+<li><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br></li>
+<li><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br></li>
+<li><strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br></li>
+<li><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br></li>
+<li><strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br></li>
+<li><strong>Professional:</strong> Staff Work, Team Collaboration, Project & Stakeholder Management, Presentations, Critical Thinking (Mental Models, Ladder of Inference)</li>
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
 </ul>
@@ -370,13 +370,13 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
               <li>
 <b>Skills:</b><br>
 
-<strong>Technical:</strong> Python, Linux, Cloud Computing (AWS), Power BI, Tableau, Data Analytics<br>
+<li><strong>Technical:</strong> Python, Linux, Cloud Computing (AWS), Power BI, Tableau, Data Analytics<br></li>
 
-<strong>Cybersecurity:</strong> Network Security (Firewall, IDS/IPS, SIEM, Security Intelligence), Vulnerability Assessment, Incident Management, Server & Mobile OS Security, OSINT, OT Security<br>
+<li><strong>Cybersecurity:</strong> Network Security (Firewall, IDS/IPS, SIEM, Security Intelligence), Vulnerability Assessment, Incident Management, Server & Mobile OS Security, OSINT, OT Security<br></li>
 
-<strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Ladder of  Inference, Thirty-Six Stratagems<br>
+<li><strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Ladder of  Inference, Thirty-Six Stratagems<br></li>
 
-<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Integrity, Presentations, Officer’s Creed, Military Expert’s Creed </li>
+<li><strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Integrity, Presentations, Officer’s Creed, Military Expert’s Creed </li></li>
             </ul>
           </div>
         </div>
