update pub cidex

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
     <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
 <li>Participated in a cybersecurity tabletop exercise using Qlik Sense and MITRE ATT&CK tools (Decider, Navigator, Technique Inference Engine) to map attacker behavior, generate TTP heatmaps, and assess cyber readiness</li>
-      <li>Attended cybersecurity events including CIDeX training 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
+      <li>Selected participant of Critical Infrastructure Defence Exercise (CIDeX) 2024; gained hands-on experience with Splunk, Arkime, Zeek, Wireshark, and ELK Stack in real-world scenarios involving event log analysis, Sysmon data, OT protocol inspection, and OT attack vector identification</li>
       <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
       <li>Collaborated closely with GovTech on the Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP) to enhance PUB’s cybersecurity posture</li>
       <li>Continuously updated and optimized IT/OT specifications to ensure compliance with the latest IM8 (Reform) and CCoP policies</li>
