--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
       <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
 <li>Facilitated application walkthrough sessions prior to VAPT to help vendors better understand PUB’s system application functions</li>
       <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall and ensured tested connectivity and valid credentials to facilitate secure and seamless access for VAPT vendor</li>
+<li>Planned budget forecasting for all IT VAPT systems and purple teaming exercises for subsequent years as OIC</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
       <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
@@ -325,7 +326,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li><strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br></li>
 <li><strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br></li>
 <li><strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br></li>
-<li><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br></li>
+<li><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), OWASP Web Security Testing Guide (WSTG), Vulnerability Assessment Framework<br></li>
 <li><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br></li>
 <li><strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br></li>
 <li><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br></li>
@@ -376,7 +377,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
 <li><strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Ladder of  Inference, Thirty-Six Stratagems<br></li>
 
-<li><strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Integrity, Presentations, Officer’s Creed, Military Expert’s Creed </li></li>
+<li><strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Integrity, Officer’s Creed, Military Expert’s Creed, SAF 8 Core Values, BAR–DAR–PAR, Presentations</li>
             </ul>
           </div>
         </div>
