--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li>Facilitated application walkthrough sessions prior to VAPT to help vendors better understand PUB’s system application functions</li>
       <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall and ensured tested connectivity and valid credentials to facilitate secure and seamless access for VAPT vendor</li>
 <li>Planned budget forecasting for all IT VAPT systems and purple teaming exercises for subsequent years as OIC</li>
-<li>Served as Secondary OIC for OT VAPT and Purple Teaming, collaborating with vendors and stakeholders to ensure secure and smooth operations across water plant facilities</li>
+<li>Served as Secondary OIC for all OT VAPT and Purple Teaming exercises, collaborating with vendors and stakeholders to ensure secure and smooth operations across water plant facilities</li>
+<li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
-      <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
       <li>Delivered threat hunting insights using SPLUNK, Arkime, ELK Stack, Windows Event Logs, and Sysmon logs</li>
       <li>Adopted STRIDE-LM and M3TID to systematically identify, model, and prioritize cybersecurity threats in risk assessments</li>
       <li>Conducted reviews of third-party VAPT reports (cloud VA, mobile PT, web PT, network PT), assessing findings derived from tools like Burp Suite, Wireshark, and Nessus</li>
@@ -323,14 +323,14 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
  <li>
 <b>Skills:</b> <br>
-<li><strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, AWS GuardDuty, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br></li>
+<li><strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Defender for Cloud (MDC), Microsoft Intune, Dragos Advanced Threat Detection System (ATDS),  AWS GuardDuty, Symantec Endpoint Protection (SEP), Cortex XDR, Cerberus (Powered by CrowdStrike Falcon), Menlo Security<br></li>
 <li><strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br></li>
 <li><strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), MITRE ATT&CK tools (Decider, Navigator, Technique Inference Engine), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br></li>
 <li><strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, QRadar, Windows Event Logs, Sysmon Logs <br></li>
-<li><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), OWASP Web Security Testing Guide (WSTG), OWASP Mobile Security Testing Guide (MSTG), Vulnerability Assessment Framework<br></li>
+<li><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, SSLyze, Terrapin Scanner, Wappalyzer, SMBMap, Sqlmap, Metasploit, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), OWASP Web Security Testing Guide (WSTG), OWASP Mobile Security Testing Guide (MSTG), Vulnerability Assessment Framework<br></li>
 <li><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br></li>
 <li><strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br></li>
-<li><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br></li>
+<li><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, Microsoft Office(Excel, Powerpoint, Word), Microsoft Teams, Slack, Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br></li>
 <li><strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br></li>
 <li><strong>Professional:</strong> Staff Work, Team Collaboration, Project & Stakeholder Management, Presentations, Critical Thinking (Mental Models, Ladder of Inference)</li>
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
